# libnix-haskell

./: .gitignore  CHANGELOG  CHANGELOG.md  README.md  libnix.cabal  shell.nix
Foreign/Nix/: Shellout.hs
Foreign/Nix/Shellout/: Helpers.hs  Prefetch.hs  Types.hs
tests/: Main.hs  TestShellout.hs
