name:                libnix
version:             0.4.0.0
synopsis:            Bindings to the nix package manager
description:         Use the nix package manager from Haskell. All modules are designed to be imported qualified.
category:            Foreign, Nix
homepage:            https://github.com/Profpatsch/libnix-haskell#readme
bug-reports:         https://github.com/Profpatsch/libnix-haskell/issues
license:             GPL-3
license-file:        LICENSE
author:              Profpatsch
maintainer:          mail@profpatsch.de
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
   LICENSE
   CHANGELOG.md
   README.md
   shell.nix

source-repository head
  type: git
  location: https://github.com/Profpatsch/libnix-haskell

library
  exposed-modules:     Foreign.Nix.Shellout
                     , Foreign.Nix.Shellout.Prefetch
                     , Foreign.Nix.Shellout.Types
  other-modules:       Foreign.Nix.Shellout.Helpers
  build-depends:       base >=4.9 && <5.0
                     , aeson >=1.0.0.0
                     , bytestring
                     , deepseq
                     , errors >=2.2.0
                     , filepath
                     , mtl
                     , process
                     , text
  -- hs-source-dirs:
  ghc-options:        -Wall
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  other-modules:       TestShellout
  build-depends:       base
                     , directory
                     , errors
                     , text
                     , libnix
                     , tasty
                     , tasty-hunit
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
